2012-03-05 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Fixed an error 
	updating description field whe the user has Incident Operator
	profile

2012-03-05 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/side_menu.php: Fixed an ACL problem with new
	ticket creation with IR and IW flags.

2012-03-05 Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Update version.

	* operation/user_report/report_monthly.php,
	godmode/usuarios/lista_usuarios.php: Some format/visual fixes.


2012-03-02 Sancho Lerena <slerena@artica.es>

	* include/functions_api.php
        include/api.php: API to create users

2012-02-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents_simple/incident_new.php: Added form
	validation to control incidents creation with empty title.
	* operation/side_menu.php: Added a control to show New ticket
	option in simple incident view only when user has IM flag.

2012-02-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/js/integria_incident_search.js: Fixed a bug which
	allow the user to create an incident without title.

2012-02-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/search.php: Added string End of search to
	tell the user the search was finished.

2012-02-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/side_menu.php: Changed Manage product string
	to Product type.

2012-02-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_form.php: Fixed a bug related with
	a foreach statement.
	* include/functions.php: Created safe_input_array function

2012-02-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/usuarios/configurar_usuarios.php: Fixed an error
	in manage user table style with simple mode flag.

2012-02-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions.php: Fixed a wrong call to htmlentities
	function.

2012-02-21 Dario Rodriguez <dario.rodriguez@artica.es>
